# scraper

./: .gitignore  main.py  pyproject.toml
scraper/: app.py  config.py  errors.py  model.py  session.py  view.py  web.py
scraper/emex/: session.py
