[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Vladislav Gorokhov <gvsnbala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium-wire = "^5.0.0"
selenium = "^4.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
mypy = "^0.981"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
