[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Vladislav Gorokhov <gvsnbala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.5.0"
PyYAML = "^6.0"
pydantic = "^1.10.2"
selenium-wire = "4.6.5"
pyOpenSSL = "22.0.0"
Flask = "^2.2.2"
orjson = "^3.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
mypy = "^0.981"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
